[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyhole"
version = "{{PROJECT_VERSION}}"
description = "cyhole, designed to help python's developers to interact to the most popular external API services in crypto and create automation processes."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Andrea Zanini", email= "" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Framework :: Pydantic",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Financial and Insurance Industry"
]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.7.0",
    "aiohttp>=3.9.5"
]

[project.urls]
Homepage = "https://github.com/zazza123/cyhole"
Repository = "https://github.com/zazza123/cyhole"
Documentation = "https://zazza123.github.io/cyhole"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]

[tool.coverage.run]
source = [
    "src"
]
context = '${CONTEXT}'
omit = [
    "tests/config.py"
]